--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Joseph Spearritt <joe.spearritt@live.com>",
   "license": "MIT",
   "scripts": {
-    "fmt": "yarn prettier --write .",
-    "lint": "eslint . --ext .ts"
+    "fmt": "yarn prettier --write ./src",
+    "lint": "eslint --ext .ts ."
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.53.0",
@@ -20,6 +20,9 @@
     "typescript": "^4.9.5"
   },
   "lint-staged": {
-    "**/*": "yarn fmt && yarn lint"
+    "*.{ts,tsx,js,jsx}": [
+      "yarn fmt",
+      "yarn lint"
+    ]
   }
 }
