--- a/package.json
+++ b/package.json
@@ -7,9 +7,19 @@
   "license": "MIT",
   "scripts": {
     "fmt": "yarn prettier --write ./src",
-    "lint": "eslint --ext .ts ."
+    "lint": "eslint --ext .ts .",
+    "build": "tsc",
+    "start": "node ./dist/index.js"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "yarn fmt",
+      "yarn lint"
+    ]
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.14.1",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.34.0",
@@ -19,10 +29,7 @@
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
   },
-  "lint-staged": {
-    "*.{ts,tsx,js,jsx}": [
-      "yarn fmt",
-      "yarn lint"
-    ]
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
