--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "fmt": "yarn prettier --write ./src",
     "lint": "eslint --ext .ts .",
     "build": "tsc",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "watch": "nodemon ./src/index.ts"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-ws": "^3.0.1",
     "@types/node": "^18.14.1",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
@@ -26,10 +28,14 @@
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
+    "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-ws": "^5.0.2",
+    "ws": "^8.12.1"
   }
 }
