--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -15,6 +15,9 @@ parserOptions:
 plugins:
   - '@typescript-eslint'
 rules:
+  '@typescript-eslint/no-unused-vars':
+    - warn
+    - argsIgnorePattern: '^_'
   indent:
     - error
     - 2
@@ -25,5 +28,8 @@ rules:
     - error
     - single
   semi:
+    - error
+    - always
+  eqeqeq:
     - error
     - always
