--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint --ext .ts .",
     "build": "tsc",
     "start": "node ./dist/index.js",
-    "watch": "nodemon ./src/index.ts"
+    "watch": "nodemon ./src/index.ts",
+    "test": "jest"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
@@ -21,15 +22,19 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/express-ws": "^3.0.1",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.14.1",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jest": "^27.2.1",
     "husky": "^8.0.3",
+    "jest": "^29.4.3",
     "lint-staged": "^13.1.2",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
